--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
 
 .data {
   font-family: "Monaspace Xenon";
-  color: var(--sand-1)
+  color: var(--sand-1);
 }
 
 .positive {
@@ -79,28 +79,4 @@ button,
 button:hover,
 .button:hover {
   cursor: pointer;
-}
-
-html {
-  height: 100%;
-}
-
-html > body {
-  height: 100%;
-  display: grid;
-  grid-template-rows: auto 1fr;
-  grid-template-columns: auto 1fr;
-  background: var(--gray-11);
-}
-
-html > body > header {
-  grid-column: 1/3;
-}
-
-.view {
-  height: 100%;
-  background: var(--gray-10);
-  border: 1px solid var(--gray-8);
-  border-top-left-radius: var(--radius-3);
-  padding: var(--size-4);
 }
