--- a/ui/components/month/month.html
+++ b/ui/components/month/month.html
@@ -1,32 +1,3 @@
-<style>
-  #month {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: var(--size-4);
-    header {
-      display: grid;
-      grid-template-columns: 120px 80px 1fr auto;
-      grid-gap: var(--size-1);
-      h2 {
-        font-size: var(--font-size-2);
-        grid-column: 1/3;
-      }
-      button {
-        grid-column: 4;
-      }
-    }
-    section {
-      display: grid;
-      grid-template-columns: 1fr;
-      grid-gap: var(--size-3);
-
-      h3 {
-        padding-top: var(--size-2);
-      }
-    }
-  }
-</style>
-
 <header x-data="{edit: false}">
   <h2
     x-show="!edit"
@@ -58,7 +29,7 @@
   <h3 class="h3">Income</h3>
   <template x-for="category in $store.categories.inflow" :key="category.id">
     <div
-      hx-get="/comps/month/category.html"
+      hx-get="/components/month/category.html"
       hx-trigger="load"
       x-init="$nextTick(() => {htmx.process($el)})"
       class="category"
@@ -66,7 +37,7 @@
   </template>
   <div
     class="add card"
-    hx-get="/comps/month/add.html"
+    hx-get="/components/month/add.html"
     hx-trigger="load"
     x-data="{category: '', value: 0}"
   ></div>
@@ -76,7 +47,7 @@
   <h3 class="h3">Expenses</h3>
   <template x-for="category in $store.categories.outflow" :key="category.id">
     <div
-      hx-get="/comps/month/category.html"
+      hx-get="/components/month/category.html"
       hx-trigger="load"
       x-init="$nextTick(() => {htmx.process($el)})"
       class="category"
@@ -84,7 +55,7 @@
   </template>
   <div
     class="add card"
-    hx-get="/comps/month/add.html"
+    hx-get="/components/month/add.html"
     hx-trigger="load"
     x-data="{category: '', value: 0}"
   ></div>
