--- a/ui/components/month/add.css
+++ b/ui/components/month/add.css
@@ -1,13 +1,13 @@
-.add {
+#month .add {
   display: grid;
   grid-gap: var(--size-3);
   grid-template-columns: 1fr 120px 60px;
 }
 
-.add > .value {
+#month .add > .value {
   width: 100%;
 }
 
-.add > button {
+#month .add > button {
   text-align: right;
 }
