--- a/ui/components/header.html
+++ b/ui/components/header.html
@@ -1,4 +1,5 @@
 <h1 class="data" x-text="$store.name"></h1>
 <nav>
+  <button @click="$store.view = 'categories'">Categories</button>
   <button @click="$store.view = 'settings'">Settings</button>
 </nav>
