--- a/ui/components/sidebar.css
+++ b/ui/components/sidebar.css
@@ -29,8 +29,18 @@
   grid-gap: 0 var(--size-2);
 }
 
+#sidebar ol li h3 {
+  margin: auto 0;
+}
+
 #sidebar ol li small {
   grid-row: 2;
+}
+
+#sidebar ol li button.delete {
+  font-size: var(--font-size-2);
+  font-weight: var(--font-weight-9);
+  color: var(--red-9);
 }
 
 #sidebar ol li:hover {
@@ -46,3 +56,4 @@
   background: var(--gray-10);
   border: 1px solid var(--gray-8);
 }
+
