--- a/ui/style.css
+++ b/ui/style.css
@@ -5,12 +5,13 @@
 
 @import "/components/header.css";
 @import "/components/sidebar.css";
+@import "/components/settings.css";
 @import "/components/month/month.css";
 @import "/components/month/category.css";
 @import "/components/month/add.css";
-@import "/components/settings/settings.css";
-@import "/components/settings/category.css";
-@import "/components/settings/add.css";
+@import "/components/categories/categories.css";
+@import "/components/categories/category.css";
+@import "/components/categories/add.css";
 
 *,
 *::before,
@@ -47,6 +48,7 @@
   border: 1px solid var(--gray-8);
   padding: calc(var(--size-1) + var(--size-1))
     calc(var(--size-2) + var(--size-1));
+  padding-top: calc(var(--size-2) + var(--size-1));
   border-radius: var(--radius-2);
   box-shadow: 0 0 var(--size-1) 0 var(--gray-10);
 }
@@ -114,13 +116,13 @@ html {
 
 body {
   height: 100%;
- 
+
   display: grid;
   grid-template-rows: auto 1fr;
   grid-template-columns: auto 1fr;
 
   background: var(--gray-10);
-  
+
   #header {
     grid-column: 1 / 3;
   }
@@ -129,7 +131,9 @@ body {
 main {
   height: 100%;
   background: var(--gray-11);
-  border: 1px solid var(--gray-8);
+  border: none;
+  border-left: 1px solid var(--gray-8);
+  border-top: 1px solid var(--gray-8);
   border-top-left-radius: var(--radius-3);
   padding: var(--size-4);
 }
