--- a/ui/components/categories/add.css
+++ b/ui/components/categories/add.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-gap: var(--size-3);
   grid-template-columns: 1fr 60px;
+  height: var(--size-8);
 }
 
 #categories .add > .value {
