--- a/ui/components/header.css
+++ b/ui/components/header.css
@@ -2,17 +2,30 @@
   display: grid;
   grid-template-rows: auto;
   grid-template-columns: 1fr auto;
-  padding: var(--size-3);
-  padding-top: var(--size-4);
+  padding-top: var(--size-3);
+  padding-left: var(--size-2-2-1);
+  padding-right: var(--size-2);
+  padding-bottom: var(--size-1-1);
 }
 
 #header h1 {
   font-size: var(--font-size-4);
+  margin: auto 0;
 }
 
 #header nav {
-  margin-top: auto;
+  margin-top: auto 0;
   display: grid;
   grid-template-columns: auto auto;
   grid-gap: var(--size-3);
+}
+
+#header nav button:not(.selected) {
+  border: 1px solid transparent;
+  background: transparent;
+}
+
+#header nav button:not(.selected):hover {
+  background: var(--gray-10);
+  border: 1px solid var(--gray-8);
 }
