--- a/ui/components/month/category.css
+++ b/ui/components/month/category.css
@@ -2,25 +2,40 @@
   display: grid;
   grid-gap: var(--size-3);
   grid-template-columns: 1fr auto 120px 60px;
+  height: var(--size-8);
 }
 
 #month .category > div h4 {
   margin: auto 0;
 }
 
-#month .category > div p {
-  padding-left: var(--size-1);
-  margin: auto 0;
+#month .category > div span {
+  text-align: right;
+  margin-top: auto;
+}
+
+#month .category > div span span {
+  margin-top: auto;
 }
 
 #month .category > div .name {
   width: 100%;
 }
 
-#month .category > div .value {
-  width: 100%;
+#month .category div .value {
+  width: 80px;
+  text-align: right;
+  margin-top: auto;
 }
 
-#month .category > div button {
+#month .category div .currency {
+  border-bottom: var(--input-border);
+}
+
+#month .category div .currency .value.input {
+  border-bottom: none;
+}
+
+#month .category div button {
   text-align: right;
 }
