--- a/ui/components/settings.css
+++ b/ui/components/settings.css
@@ -1,20 +1,60 @@
 #settings {
   display: grid;
   grid-template-columns: 1fr;
-  grid-gap: var(--size-5);
+  grid-gap: var(--size-4);
+}
+
+#settings h2 {
+  height: var(--size-5);
 }
 
 #settings section {
   display: grid;
-  grid-gap: var(--size-2) var(--size-1);
+  grid-gap: var(--size-3);
 }
 
-#settings #file {
+#settings section h3 {
+  padding-top: var(--size-2);
+}
+
+#settings #name div {
+  display: grid;
+  grid-gap: var(--size-3);
+  grid-template-columns: 1fr 60px;
+  height: var(--size-8);
+}
+
+#settings #name div h4 {
+  margin: auto 0;
+}
+
+#settings #name div button {
+  text-align: right;
+}
+
+#settings #currency div {
+  display: grid;
+  grid-gap: var(--size-3);
+  grid-template-columns: 1fr 60px;
+  height: var(--size-8);
+}
+
+#settings #currency div h4 {
+  margin: auto 0;
+}
+
+#settings #currency div button {
+  text-align: right;
+}
+
+#settings #file div {
+  display: grid;
   grid-template-columns: 1fr auto;
+  height: var(--size-8);
 }
 
-#settings #file h2 {
-  grid-column: 1/3;
+#settings #file p {
+  margin: auto 0;
 }
 
 #settings #file form {
