--- a/ui/components/sidebar.css
+++ b/ui/components/sidebar.css
@@ -2,14 +2,14 @@
   min-width: 220px;
   padding: var(--size-4);
   padding-left: var(--size-2);
-  padding-right: var(--size-3);
+  padding-right: var(--size-2);
 }
 
 #sidebar header {
   display: inline;
   display: grid;
   grid-template-columns: 1fr auto;
-  padding: 0 var(--size-2);
+  padding: 0 var(--size-2-1);
 }
 
 #sidebar header button {
