--- a/ui/style.css
+++ b/ui/style.css
@@ -13,6 +13,13 @@
 @import "/components/categories/category.css";
 @import "/components/categories/add.css";
 
+:root {
+  --size-1-1: calc(var(--size-1) + var(--size-1));
+  --size-2-1: calc(var(--size-2) + var(--size-1));
+  --size-2-2-1: calc(2 * var(--size-2) + var(--size-1));
+  --input-border: 1px solid var(--gray-6);
+}
+
 *,
 *::before,
 *::after {
@@ -26,6 +33,7 @@
   color: var(--gray-3);
   box-sizing: border-box;
   text-align: left;
+  box-sizing: border-box;
 }
 
 .h2 {
@@ -46,9 +54,10 @@
 .card {
   background: var(--gray-9);
   border: 1px solid var(--gray-8);
-  padding: calc(var(--size-1) + var(--size-1))
-    calc(var(--size-2) + var(--size-1));
-  padding-top: calc(var(--size-2) + var(--size-1));
+  padding-left: var(--size-2-1);
+  padding-right: var(--size-2-1);
+  padding-top: var(--size-2-1);
+  padding-bottom: var(--size-1-1);
   border-radius: var(--radius-2);
   box-shadow: 0 0 var(--size-1) 0 var(--gray-10);
 }
@@ -79,16 +88,18 @@ input[type="number"] {
   border-radius: var(--radius-2);
   font-family: "Monaspace Radon";
   color: var(--sand-2);
-  border: none;
+  font-style: italic;
   padding: 0;
   border-radius: 0;
-  border-bottom: 1px solid var(--gray-7);
+  border: none;
+  border-bottom: var(--input-border);
 }
 
 input[type="text"]:focus,
 input[type="number"]:focus {
   outline: none;
 }
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
@@ -116,16 +127,14 @@ html {
 
 body {
   height: 100%;
-
   display: grid;
   grid-template-rows: auto 1fr;
   grid-template-columns: auto 1fr;
-
   background: var(--gray-10);
+}
 
-  #header {
-    grid-column: 1 / 3;
-  }
+body #header {
+  grid-column: 1 / 3;
 }
 
 main {
@@ -135,5 +144,5 @@ main {
   border-left: 1px solid var(--gray-8);
   border-top: 1px solid var(--gray-8);
   border-top-left-radius: var(--radius-3);
-  padding: var(--size-4);
+  padding: var(--size-2-2-1);
 }
